# Shopping-List-OOP

./: .gitignore  Classes.md  Shopping List Documention.docx  pyproject.toml  run.py
auth/: user.py  users.json
helpers/: __init__.py  banner.py  colorama_funcs.py  commands.py  emojis.py  exceptions.py  functions.py  help.py  messages.py
product/: product.py  products.json
