[tool.poetry]
name = "shopping-list-oop-beta"
version = "0.1.0"
description = ""
authors = ["Babakzare <babakzare2250@gmail.com>"]
readme = "README.md"
packages = [{include = "shopping_list_oop_beta"}]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"
pyment = "^0.3.3"
colorama = "^0.4.6"
emoji = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
